--- a/IFE-beautifulWeb/style.css
+++ b/IFE-beautifulWeb/style.css
@@ -363,7 +363,6 @@ div[class = "pageTwoContent"] div:nth-child(2) {
 /**********crew************/
 .crewContainer {
 	width: 100%;
-	background: blue;
 	margin: 100px auto;
 }
 
@@ -378,7 +377,7 @@ div[class = "pageTwoContent"] div:nth-child(2) {
 	margin-bottom: 65px;
 	width: 770px;
 	text-align: center;
-	color: #797979;
+	color: white;
 }
 
 .crews img {
@@ -386,4 +385,59 @@ div[class = "pageTwoContent"] div:nth-child(2) {
 	height: 340px;
 }
 
+.crewLine {
+	margin-bottom: 30px
+}
+
+.crew {
+	position: relative;
+}
+
+.crew:hover > div {
+	display: block;
+	cursor: pointer
+}
+
+
+
+
+
+.hiddenContent {
+	width: 470px;
+	height: 340px;
+	display: none;
+	position: absolute;
+	left: 0;
+	top: 0;
+
+	background-color: rgba(0,0,0,.3);
+
+}
+
+.hiddenContent:hover {
+	display: block;
+}
+
+.hiddenContent h4 {
+	margin-top: 110px;
+	font-size: 20px;
+	color: white;
+}
+
+.hiddenContent p {
+	width: 470px;
+	margin-top: 20px;
+	margin-bottom: 40px;
+}
+
+
+.Icon img {
+	width: 20px;
+	height: 20px;
+	border: rgba(255,255,255,.5) solid 1px;
+	border-radius: 50%;
+	background-color: rgba(0,0,0,.3);
+	padding: 15px;
+
+}
 
